enabled specifying static file directories which will be automatically searched for files by file path

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Light Brightness Modifier</title>
+    <link rel="stylesheet" href="/static/index.css">
 </head>
 
     <input type="range" min="0" max="100" value="50" class="slider" id="slider" name="brightness">
